--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1564,8 +1564,8 @@ input[type="color"] {
 /* .cl-internal-1dauvpw{
   display: none;
 } */
-
+/* 
 .cl-cardBox{
   width: 80vw !important ;
   height:60vh !important
-}
+} */
